--- a/Basic Prompting.ipynb
+++ b/Basic Prompting.ipynb
@@ -18,7 +18,7 @@
    "id": "0a9b64e5-fb21-4e85-b50c-11bdcead190b",
    "metadata": {},
    "source": [
-    "## Set Up"
+    "## Setup"
    ]
   },
   {
