--- a/Inferring, Transforming and Expanding.ipynb
+++ b/Inferring, Transforming and Expanding.ipynb
@@ -651,11 +651,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "fcfe7347-1552-47b1-b2d1-60ba93d0ef71",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "text = \" Hi, I am Albatross\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "0270fdcc-d112-48b5-bd77-0d445c757dc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the translation of the text into Nepali:\n",
+      "\n",
+      "नमस्ते, म अल्बाट्रस हुँ।\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "    Translate the text into nepali.\n",
+    "    The given text is delimited by triple backticks:\n",
+    "    In English: {text}\n",
+    "\"\"\"\n",
+    "l_translate = get_completion(prompt)\n",
+    "print(l_translate)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -667,27 +695,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "c96bf10b-5ac8-4fa7-b7a9-932168270d72",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the corrected version of your text:\n",
+      "\n",
+      "\"He is a good boy, studying in college.\"\n",
+      "\n",
+      "**Corrections made:**\n",
+      "1. \"boys\" should be \"boy\" to match the singular subject \"He.\"\n",
+      "2. \"Studing\" should be corrected to \"studying\" (spelling error).\n",
+      "3. \"Colleges\" should be \"college\" for consistency and to refer to the general concept rather than multiple institutions. \n",
+      "4. A comma was added to connect the two clauses more smoothly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "    Check the grammer and spelling checking and also where is mistake\n",
+    "    in the following text: \n",
+    "    He is a good boys. Studing in Colleges.\n",
+    "\"\"\"\n",
+    "spell_check = get_completion(prompt)\n",
+    "print(spell_check)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f21d725-f5b4-4ee7-8456-a8a2c8e2b2ed",
+   "cell_type": "markdown",
+   "id": "49012c18-99d6-42f0-af8d-42535e7ac800",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Tone Adjustment and Format conversion"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "29448ffb-86a1-4d92-9c4d-598aeb9b3f4e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He is a diligent young man currently pursuing his studies in college.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "    Adjust the tone in format way and well format\n",
+    "    in the following text: \n",
+    "    He is a good boy, studying in college.\n",
+    "\"\"\"\n",
+    "spell_check = get_completion(prompt)\n",
+    "print(spell_check)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -700,8 +768,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "28d4942b-8d14-4b12-9e4e-80ae1445114e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_review = \"\"\"I recently purchased the CMF Phone 1 from your store, and I must say my experience has been extremely disappointing. \n",
+    "The phone was advertised as having excellent performance and battery life, but within a week of use, I have faced constant overheating, \n",
+    "apps crashing, and the battery draining in just a few hours.On top of that, the \n",
+    "camera quality is nowhere close to what was promised in the product description and \n",
+    "promotional materials. I feel misled by the positive reviews displayed on your \n",
+    "website, which clearly do not reflect the actual performance of this device.I have \n",
+    "already contacted your customer service, but the lack of timely and helpful \n",
+    "response has only added to my frustration. At this point, I expect either a full \n",
+    "refund or an immediate replacement. If this is not resolved soon, I will be forced \n",
+    "to share my negative experience on public platforms.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e5ef3c48-9749-4014-b858-0ad74f774e9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject: Thank You for Your Feedback\n",
+      "\n",
+      "Dear Valued Customer,\n",
+      "\n",
+      "Thank you for taking the time to share your experience with the CMF Phone 1. We sincerely apologize for the issues you have encountered, including overheating, app crashes, and battery performance that did not meet your expectations. We understand how frustrating this must be, especially after relying on the product descriptions and reviews.\n",
+      "\n",
+      "We appreciate your feedback regarding our customer service response time, and we are committed to improving in this area. To address your concerns promptly, we encourage you to reach out to our customer service team directly at abc@customer.com or by calling 948594854954. They will be able to assist you with your request for a refund or replacement.\n",
+      "\n",
+      "Thank you once again for your valuable feedback. We hope to resolve this matter to your satisfaction.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "AI Agent  \n",
+      "Customer Service Team\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "    Assume, you are a customer service AI assistant.\n",
+    "    Your task is to sent an email reply to the valuable customer given the customer\n",
+    "    email delimited by triple backlet and gerenate a reply to tank the customer for\n",
+    "    review. If the review is Postivie or neutral tank thank for review. If the\n",
+    "    sentiment is negative than apologize and suggest to reach out to custormer service\n",
+    "    (abc@customer.com or 948594854954).\n",
+    "    Make sure to use specific details from the review.\n",
+    "    Write in a concise and profesional tone.\n",
+    "    Sign the email as AI Agemt/\n",
+    "    Customer review: '''{p_review}'''\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad42276c-61dd-46f9-baf6-ab2dbb0e2e9e",
    "metadata": {},
    "outputs": [],
    "source": []
