--- a/Iterative and Summarizing prompt.ipynb
+++ b/Iterative and Summarizing prompt.ipynb
@@ -321,14 +321,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "8e7334db-8620-47ed-b2bd-2247824cd9f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Summary:** \"Sitaare Zameen Par\" is a heartwarming film that offers a mix of humor and emotion, making it ideal for family viewing. While some critics feel it lacks emotional depth, it is still highly recommended for its uplifting nature.\n",
+      "\n",
+      "**Sentiment:** Positive\n",
+      "\n",
+      "**Rating:** 4 out of 5\n",
+      "\n",
+      "\n",
+      "\n",
+      "**Summary:** The review praises the film for its sensitivity, highlighting the efforts of the writer, director, and dialogues. It notes that the film is a commendable follow-up to \"Taare Zameen Par\" and appreciates the well-captured messages.\n",
+      "\n",
+      "**Sentiment:** Positive\n",
+      "\n",
+      "**Rating:** 4.5/5\n",
+      "\n",
+      "\n",
+      "\n",
+      "**Summary:** The review indicates that fans believe the work has copied elements from \"Champions,\" leading to criticism for its lack of originality.\n",
+      "\n",
+      "**Sentiment:** The review has a negative sentiment due to the backlash and accusations of unoriginality.\n",
+      "\n",
+      "**Rating:** 2/5\n",
+      "\n",
+      "\n",
+      "\n",
+      "**Summary:** The reviewer expresses skepticism about the movie, stating that it relies heavily on action, religion, or sequels. However, they also recognize Aamir Khan's ability to deliver quality content in the past.\n",
+      "\n",
+      "**Sentiment:** Mixed; the reviewer is critical but acknowledges positive aspects.\n",
+      "\n",
+      "**Rating:** 3/5\n",
+      "\n",
+      "\n",
+      "\n",
+      "**Summary:** The review discusses a bold distribution move in Bollywood, highlighting that it has sparked both praise and trolling in online discussions.\n",
+      "\n",
+      "**Sentiment:** The review has a mixed sentiment, acknowledging both positive and negative reactions.\n",
+      "\n",
+      "**Rating:** 3/5\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "movie_review = [ review1, review2, review3, review4, review5]\n",
-    "for review in movie_review"
+    "for review in movie_review:\n",
+    "    prompt = f\"\"\"\n",
+    "    You have to perform the following task\n",
+    "    Summarize: Summarize the review\n",
+    "    Sentiment: How is the review\n",
+    "    Rating: Give rating according to review\n",
+    "    THes all will be perform for below review delimited by triple backticks:\n",
+    "    Review:\n",
+    "    ```{review}```\n",
+    "    \"\"\"\n",
+    "    print(get_completion(prompt))\n",
+    "    print(\"\\n\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a751c535-d5d6-4012-91cf-406dd442a64a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
